fixed button alignment and white color

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,10 @@
 .footer{
   a {
-  color: white ;
+  color: $white ;
   font-size: 25px;
   }
  p {
-  color: white;
+  color: $white;
   font-weight: lighter;
  }
 }
